replacing SLES acronym

--- a/hu_luhu_71_rn.adoc
+++ b/hu_luhu_71_rn.adoc
@@ -44,7 +44,7 @@ NetApp continues to work with the Host Utilities to add support for features aft
 
 == Fixed in this release
 
-The intermittent host OS failure issue that occurs when running the `sanlun lun show -p` command in SLES12SP1, OL7.2, RHEL7.2, and RHEL 6.8 is fixed in this release.
+The intermittent host OS failure issue that occurs when running the `sanlun lun show -p` command in SUSE Linux Enterprise Server 12 SP1, OL 7.2, RHEL 7.2, and RHEL 6.8 is fixed in this release.
 
 
 == Known problems and limitations
