--- a/hu_sles_12SP5.adoc
+++ b/hu_sles_12SP5.adoc
@@ -122,7 +122,7 @@ devices {
 
 == Known issues
 
-The SLES 12 SP5 with ONTAP release has the following known issues:
+The SUSE Linux Enterprise Server 12 SP5 with ONTAP release has the following known issues:
 
 [cols=4*,options="header"]
 |===
