--- a/hu_sles_15.adoc
+++ b/hu_sles_15.adoc
@@ -123,7 +123,7 @@ devices {
 
 == Known issues
 
-The SLES 15 with ONTAP release has the following known issues:
+The SUSE Linux Enterprise Server 15 with ONTAP release has the following known issues:
 
 [cols=4*,options="header"]
 |===
@@ -131,7 +131,7 @@ The SLES 15 with ONTAP release has the following known issues:
 | Title
 | Description
 | Bugzilla ID
-| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=1154309[1154309^] | SLES 15 host with more than 20 mapped LUNs might go into maintenance mode after a reboot | SLES 15 host with more than 20 mapped LUNs might go into maintenance mode after a reboot. The maintenance mode becomes single user mode following the message:
+| link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=1154309[1154309^] | SUSE Linux Enterprise Server 15 host with more than 20 mapped LUNs might go into maintenance mode after a reboot | SUSE Linux Enterprise Server 15 host with more than 20 mapped LUNs might go into maintenance mode after a reboot. The maintenance mode becomes single user mode following the message:
 `Give root password for maintenance (or press Control-D to continue)` | link:https://bugzilla.suse.com/show_bug.cgi?id=1104173[1104173^]
 |===
 
