--- a/nvme_sles15_sp1.adoc
+++ b/nvme_sles15_sp1.adoc
@@ -16,34 +16,34 @@ summary: Describes how to configure NVMe/FC for SUSE Linux Enterprise Server 15 
 [.lead]
 You can configure NVMe over Fibre Channel (NVMe/FC) on hosts running SUSE Linux Enterprise Server 15 SP1 and ONTAP as the target.
 
-NVMe/FC is supported on ONTAP 9.6 or later for the following versions of SLES:
+NVMe/FC is supported on ONTAP 9.6 or later for the following versions of SUSE Linux Enterprise Server:
 
-*	SLES15 SP1
+* SUSE Linux Enterprise Server 15 SP1
 +
-SLES15 SP1 host can run both NVMe/FC, & FCP traffic through the same fibre channel initiator adapter ports. See the link:https://hwu.netapp.com/Home/Index[Hardware Universe^] for a list of supported FC adapters and controllers.
+The SUSE Linux Enterprise Server 15 SP1 host can run both NVMe/FC and FCP traffic through the same fibre channel initiator adapter ports. See the link:https://hwu.netapp.com/Home/Index[Hardware Universe^] for a list of supported FC adapters and controllers.
 +
 For the most current list of supported configurations & versions, see the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^].
 
-* Native NVMe/FC auto-connect scripts are included in the nvme-cli package. You can use the native inbox lpfc driver on SLES15 SP1.
+* Native NVMe/FC auto-connect scripts are included in the nvme-cli package. You can use the native inbox lpfc driver on SUSE Linux Enterprise Server 15 SP1.
 
 == Known limitations
 
 SAN booting using the NVMe-oF protocol is currently not supported.
 
-==	Enable NVMe/FC on SLES15 SP1
+==	Enable NVMe/FC on SUSE Linux Enterprise Server 15 SP1
 
-.	Upgrade to the recommended SLES15 SP2 MU kernel
+.	Upgrade to the recommended SUSE Linux Enterprise Server 15 SP2 MU kernel
 +
 .	Upgrade to the recommended nvme-cli MU version.
 +
-This nvme-cli package contains the native NVMe/FC auto-connect scripts, so you do not need to install the external NVMe/FC auto-connect scripts provided by Broadcom on the SLES15 SP1 host.  This package also includes the ONTAP udev rule which enables round-robin load balancing for NVMe multipath, and the NetApp plug-in for ONTAP devices.
+This nvme-cli package contains the native NVMe/FC auto-connect scripts, so you do not need to install the external NVMe/FC auto-connect scripts provided by Broadcom on the SUSE Linux Enterprise Server 15 SP1 host.  This package also includes the ONTAP udev rule which enables round-robin load balancing for NVMe multipath, and the NetApp plug-in for ONTAP devices.
 +
 ----
 # rpm -qa | grep nvme-cli
 nvme-cli-1.8.1-6.9.1.x86_64
 ----
 
-.	On the SLES15 SP1 host, check the host NQN string at `/etc/nvme/hostnqn` and verify that it matches the host NQN string for the corresponding subsystem on the ONTAP array. For example:
+.	On the SUSE Linux Enterprise Server 15 SP1 host, check the host NQN string at `/etc/nvme/hostnqn` and verify that it matches the host NQN string for the corresponding subsystem on the ONTAP array. For example:
 +
 ----
 # cat /etc/nvme/hostnqn
