--- a/hu_sles_12SP3.adoc
+++ b/hu_sles_12SP3.adoc
@@ -122,7 +122,7 @@ devices {
 
 == Known issues
 
-The SLES 15 SP3 with ONTAP release has the following known issues:
+The SUSE Linux Enterprise Server 15 SP3 with ONTAP release has the following known issues:
 
 [cols=4*,options="header"]
 |===
