--- a/nvme_sles15_sp6.adoc
+++ b/nvme_sles15_sp6.adoc
@@ -15,9 +15,9 @@ summary: Describes how to configure NVMe/FC for SUSE Linux Enterprise Server 15 
 :source-highlighter: highlighter.js
    
 [.lead]
-NVMe over Fabrics (NVMe-oF), including NVMe over Fibre Channel (NVMe/FC) and other transports, is supported with SUSE Linux Enterprise Server (SLES) 15 SP6 with Asymmetric Namespace Access (ANA). In NVMe-oF environments, ANA is the equivalent of ALUA multipathing in iSCSI and FCP environments and is implemented with in-kernel NVMe multipath.
+NVMe over Fabrics (NVMe-oF), including NVMe over Fibre Channel (NVMe/FC) and other transports, is supported with SUSE Linux Enterprise Server 15 SP6 with Asymmetric Namespace Access (ANA). In NVMe-oF environments, ANA is the equivalent of ALUA multipathing in iSCSI and FCP environments and is implemented with in-kernel NVMe multipath.
 
-The following support is available for the NVMe-oF host configuration for SLES 15 SP6 with ONTAP:
+The following support is available for the NVMe-oF host configuration for SUSE Linux Enterprise Server 15 SP6 with ONTAP:
 
 * Both NVMe and SCSI traffic can be run on the same co-existent host. Therefore, for SCSI LUNs, you can configure dm-multipath for SCSI mpath devices, whereas you might use NVMe multipath to configure NVMe-oF namespace devices on the host.
 
@@ -34,7 +34,7 @@ For additional details on supported configurations, see the link:https://mysuppo
 
 * SAN booting using the NVMe-oF protocol is currently not supported.
 
-* There's no `sanlun` support for NVMe-oF. Therefore, the host utility support isn't available for NVMe-oF on an SLES 15 SP6 host. You can rely on the NetApp plug-in included in the native `nvme-cli` package for all NVMe-oF transports.
+* There's no `sanlun` support for NVMe-oF. Therefore, the host utility support isn't available for NVMe-oF on an SUSE Linux Enterprise Server 15 SP6 host. You can rely on the NetApp plug-in included in the native `nvme-cli` package for all NVMe-oF transports.
 
 == Configure NVMe/FC
 
@@ -132,7 +132,7 @@ cat /sys/class/scsi_host/host*/nvme_info
 +
 In the following example, one initiator port is enabled and connected with two target LIFs.
 +
-.Example output:
+.Show example output:
 [%collapsible]
 ====
 [subs=+quotes]
@@ -168,7 +168,7 @@ FCP CMPL: xb 0000082d Err 000283bb
 --
 .Steps
 
-. The native inbox qla2xxx driver included in the SLES 15 SP6 kernel has the latest fixes essential for ONTAP support. Verify that you are running the supported adapter driver and firmware versions:
+. The native inbox qla2xxx driver included in the SUSE Linux Enterprise Server 15 SP6 kernel has the latest fixes essential for ONTAP support. Verify that you are running the supported adapter driver and firmware versions:
 +
 ----
 cat /sys/class/fc_host/host*/symbolic_name 
@@ -250,7 +250,7 @@ NVMe/TCP does not have an auto-connect functionality. Therefore, you need to per
 nvme discover -t tcp -w <host-traddr> -a <traddr>
 ----
 +
-.Example output:
+.Show example output:
 [%collapsible]
 ====
 [subs=+quotes]
@@ -379,7 +379,7 @@ nvme connect-all -t tcp -w host-traddr -a traddr -l <ctrl_loss_timeout_in_second
 ----
 +
 [NOTE]
-Beginning with SLES15 SP6, the default setting for the NVMe/TCP `ctrl-loss-tmo` timeout is turned off, which means there is no limit on the number of retries (indefinite retry). As a result, you don't need to manually configure a specific `ctrl-loss-tmo` timeout duration when using the `nvme connect` or `nvme connect-all` commands (option `-l`). Additonally, the NVMe/TCP controllers don't experience timeouts in the event of a path failure and remain connected indefinitely.
+Beginning with SUSE Linux Enterprise Server 15 SP6, the default setting for the NVMe/TCP `ctrl-loss-tmo` timeout is turned off, which means there is no limit on the number of retries (indefinite retry). As a result, you don't need to manually configure a specific `ctrl-loss-tmo` timeout duration when using the `nvme connect` or `nvme connect-all` commands (option `-l`). Additonally, the NVMe/TCP controllers don't experience timeouts in the event of a path failure and remain connected indefinitely.
 
 == Validate NVMe-oF
 
@@ -544,7 +544,7 @@ Device           Vserver    Namespace Path                       NSID UUID      
 
 == Create a persistent discovery controller
 
-Beginning with ONTAP 9.11.1, you can create a PDC for your SLES 15 SP6 host. A PDC is required to automatically detect an NVMe subsystem add or remove scenario and changes to the discovery log page data. 
+Beginning with ONTAP 9.11.1, you can create a PDC for your SUSE Linux Enterprise Server 15 SP6 host. A PDC is required to automatically detect an NVMe subsystem add or remove scenario and changes to the discovery log page data. 
 
 .Steps
 
@@ -555,7 +555,7 @@ nvme discover -t <trtype> -w <host-traddr> -a <traddr>
 ----
 
 +
-.Example output:
+.Show example output:
 [%collapsible]
 ====
 [subs=+quotes]
@@ -691,7 +691,7 @@ Vserver UUID: 48391d66-c0a6-11ec-aaa5-d039ea165514
 
 == Set up secure in-band authentication
 
-Beginning with ONTAP 9.12.1, secure in-band authentication is supported over NVMe/TCP and NVMe/FC between your SLES 15 SP6 host and your ONTAP controller.
+Beginning with ONTAP 9.12.1, secure in-band authentication is supported over NVMe/TCP and NVMe/FC between your SUSE Linux Enterprise Server 15 SP6 host and your ONTAP controller.
 
 To set up secure authentication, each host or controller must be associated with a `DH-HMAC-CHAP` key, which is a combination of the NQN of the NVMe host or controller and an authentication secret configured by the administrator. To authenticate its peer, an NVMe host or controller must recognize the key associated with the peer. 
 
@@ -917,4 +917,4 @@ DHHC-
 
 == Known issues 
 
-There are no known issues for the SLES 15 SP6 with ONTAP release. 
+There are no known issues for the SUSE Linux Enterprise Server 15 SP6 with ONTAP release. 
