--- a/hu_rhel_610.adoc
+++ b/hu_rhel_610.adoc
@@ -123,6 +123,7 @@ devices {
 
 include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
+[[known-problems-and-limitations]]
 == Known issues
 
 There are no known issues for the RHEL 6.10 with ONTAP release.
