--- a/legal_notices.adoc
+++ b/legal_notices.adoc
@@ -1,5 +1,5 @@
 ---
-permalink: legal_notice.html
+permalink: legal_notices.html
 sidebar: sidebar
 keywords: legal, notices, copyright, trademarks, patents
 summary: Legal notices provide access to copyright statements, trademarks, patents, and more.
@@ -13,6 +13,7 @@ summary: Legal notices provide access to copyright statements, trademarks, paten
 :linkattrs:
 :imagesdir: ./media/
 
+[.lead]
 Legal notices provide access to copyright statements, trademarks, patents, and more.
 
 == Copyright
