--- a/nvme_aix.adoc
+++ b/nvme_aix.adoc
@@ -280,4 +280,4 @@ The NVMe/FC host configuration for AIX with ONTAP has the following known issues
 
 == Troubleshoot
 
-Before troubleshooting any NVMe/FC failures, verify that you are running a configuration that is compliant to the Interoperability Matrix Tool (IMT) specifications. If you are still facing issues, contact link:mysupport.netapp.com[NetApp support^] for further triage.
+Before troubleshooting any NVMe/FC failures, verify that you are running a configuration that is compliant to the Interoperability Matrix Tool (IMT) specifications. If you are still facing issues, contact link:https://mysupport.netapp.com[NetApp support^] for further triage.
