--- a/hu_fcp_scsi_index.adoc
+++ b/hu_fcp_scsi_index.adoc
@@ -12,4 +12,5 @@ summary:
 :linkattrs:
 :imagesdir: ./media/
 
-You can configure certain SAN hosts for FCP or iSCSI with ONTAP as the target. First you install the relevant operating system host utility package, which includes the SAN tool kit, and then you verify the multipath settings for the NetApp ONTAP LUNs. 
+[.lead]
+You can configure certain SAN hosts for FCP or iSCSI with ONTAP as the target. First you install the relevant operating system host utility package, which includes the SAN tool kit. You then verify the multipath settings for the NetApp ONTAP LUNs. 
