--- a/hu_rhel_80.adoc
+++ b/hu_rhel_80.adoc
@@ -4,7 +4,6 @@ permalink: hu_rhel_80.html
 keywords: host utilities, red hat, rhel, linux, 8.0, netapp, ontap
 summary: Describes how to use Red Hat Enterprise Linux 8.0 with ONTAP
 ---
-
 = Use Red Hat Enterprise Linux 8.0 with ONTAP
 :hardbreaks:
 :toclevels: 1
@@ -121,6 +120,7 @@ devices {
 
 include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
+[[known-problems-and-limitations]]
 == Known issues
 
 The RHEL 8.0 with ONTAP release has the following known issues:
