--- a/hu_rhel_81.adoc
+++ b/hu_rhel_81.adoc
@@ -4,7 +4,6 @@ permalink: hu_rhel_81.html
 keywords: host utilities, red hat, rhel, linux, 8.1, netapp, ontap
 summary: Describes how to use Red Hat Enterprise Linux 8.1 with ONTAP
 ---
-
 = Use Red Hat Enterprise Linux 8.1 with ONTAP
 :hardbreaks:
 :toclevels: 1
@@ -122,6 +121,7 @@ devices {
 
 include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
+[[known-problems-and-limitations]]
 == Known issues
 
 The RHEL 8.1 with ONTAP release has the following known issues:
