--- a/hu_sanhost_index.adoc
+++ b/hu_sanhost_index.adoc
@@ -12,6 +12,7 @@ summary:
 :linkattrs:
 :imagesdir: ./media/
 
+[.lead]
 Discover the latest information on SAN host utility releases and access the installation procedure for your host configuration.
 
 NOTE: For reliable operation after installation, use the https://mysupport.netapp.com/matrix/imt.jsp?components=65623%3B64703%3B&solution=1&isHWU&src=IMT[NetApp Interoperability Matrix Tool^] to verify that your host supports the complete NVMe over Fabrics (including NVMe over TCP and NVMe over Fibre Channel), iSCSI, FC, or FCoE configuration.
