--- a/nvme_esxi_7.adoc
+++ b/nvme_esxi_7.adoc
@@ -4,7 +4,6 @@ permalink: nvme_esxi_7.html
 keywords: nvme, esxi, ontap, nvme/fc, hypervisor
 summary: Describes how to configure NVMe-oF for ESXi 7.x with ONTAP
 ---
-
 = NVMe-oF Host Configuration for ESXi 7.x with ONTAP
 :hardbreaks:
 :toclevels: 1
@@ -12,6 +11,9 @@ summary: Describes how to configure NVMe-oF for ESXi 7.x with ONTAP
 :icons: font
 :linkattrs:
 :imagesdir: ./media/
+
+[.lead]
+You can configure NVMe over Fabrics (NVMe-oF) on initiator hosts running ESXi 7.x and ONTAP as the target.
 
 == Supportability
 
