--- a/nvme_ol_83.adoc
+++ b/nvme_ol_83.adoc
@@ -4,7 +4,6 @@ permalink: nvme_ol_83.html
 keywords: nvme, linux, oracle, 8.3
 summary: Setting up VMe/FC Host Configuration for Oracle Linux 8.3 with ONTAP, with examples
 ---
-
 = NVMe/FC Host Configuration for Oracle Linux 8.3 with ONTAP
 :hardbreaks:
 :toclevels: 1
@@ -12,6 +11,9 @@ summary: Setting up VMe/FC Host Configuration for Oracle Linux 8.3 with ONTAP, w
 :icons: font
 :linkattrs:
 :imagesdir: ./media/
+
+[.lead]
+You can configure NVMe over Fibre Channel (NVMe/FC) on initiator hosts running Oracle Linux 8.3 and ONTAP as the target.
 
 == Supportability
 
