--- a/nvme_ol_85.adoc
+++ b/nvme_ol_85.adoc
@@ -4,7 +4,6 @@ permalink: nvme_ol_85.html
 keywords: nvme, linux, oracle, 
 summary: 
 ---
-
 = NVMe/FC Host Configuration for Oracle Linux 8.5 with ONTAP
 :hardbreaks:
 :toclevels: 1
@@ -13,6 +12,8 @@ summary:
 :linkattrs:
 :imagesdir: ./media/
 
+[.lead]
+You can configure NVMe over Fibre Channel (NVMe/FC) on initiator hosts running Oracle Linux 8.5 and ONTAP as the target.
 
 == Supportability
 
