--- a/nvme_rhel_83.adoc
+++ b/nvme_rhel_83.adoc
@@ -38,7 +38,7 @@ You can use the following procedure to enable NVMe/FC.
 
 . If you are upgrading from RHEL 8.2 to RHEL 8.3 using the `yum update/upgrade` command, your `/etc/nvme/host*` files might be lost. To avoid file loss, use the following procedure:
 +
-.Steps 
+.Show example output 
 [%collapsible]
 ====
 include::_include/nvme/reuse_nvme_enabling_step1_substeps.adoc[]
