--- a/nvme_sles15_sp3.adoc
+++ b/nvme_sles15_sp3.adoc
@@ -152,7 +152,7 @@ Online
 Online
 ----
 +
-.	Verify that the NVMe/FC initiator ports are enabled and you are able to see the target ports, and all are up and running. In this example, only 1 initiator port is enabled and connected with two target LIFs as seen in the output:
+.	Verify that the NVMe/FC initiator ports are enabled and you are able to see the target ports, and all are up and running. In the following example, only 1 initiator port is enabled and connected with two target LIFs as seen in the output:
 +
 [subs=+quotes]
 ----
