Edits post review

--- a/_include/hu/reuse_hu_san_booting_steps.adoc
+++ b/_include/hu/reuse_hu_san_booting_steps.adoc
@@ -10,4 +10,4 @@ Multiple paths only become available after the host OS is up and running on the 
 +
 For information on how to enable the HBA BIOS, see your vendor-specific documentation.
 
-. Reboot the host to verify that the boot is successful.
+. Reboot the host to verify that the SAN boot was successful.
