--- a/_include/hu/reuse_hu_multipathing.adoc
+++ b/_include/hu/reuse_hu_multipathing.adoc
@@ -1,2 +1,3 @@
 You can use the `multipath -ll` command to verify the settings for your ONTAP LUNs.
-The following sections provide sample multipath outputs for a LUN mapped to ASA and non-ASA personas.
+
+The following sections provide example multipath outputs for a LUN mapped to ASA and non-ASA personas.
