--- a/hu_sles_15SP6.adoc
+++ b/hu_sles_15SP6.adoc
@@ -71,9 +71,59 @@ include::_include/hu/reuse_hu_asa_configuration_note.adoc[]
 
 == Recommended settings
 
-The SUSE Linux Enterprise Server 15 SP6 OS is compiled to recognize ONTAP LUNs and automatically set all configuration parameters correctly for both ASA and non-ASA configurations. You can further optimize performance for your host configuration with the following recommended settings.
+The SUSE Linux Enterprise Server 15 SP6 OS recognizes ONTAP LUNs and automatically sets all configuration parameters correctly for both ASA and non-ASA configurations. You can further optimize performance for your host configuration with the following recommended settings.
 
-include::_include/hu/reuse_hu_recommended_settings.adoc[]
+The `multipath.conf` file must exist for the multipath daemon to start. If this file does not exist, you can create an empty, zero-byte file by using the following command: 
+
+`touch /etc/multipath.conf`
+
+The first time you create the `multipath.conf` file, you might need to enable and start the multipath services by using the following commands:
+
+----
+# systemctl enable multipathd
+# systemctl start multipathd
+----
+
+There is no requirement to add devices directly to the `multipath.conf` file, unless you have devices that you do not want multipath to manage or you have existing settings that override defaults. You can exclude unwanted devices by adding the following syntax to the `multipath.conf` file, replacing <DevId> with the WWID string of the device you want to exclude:
+
+----
+blacklist {
+        wwid <DevId>
+        devnode "^(ram|raw|loop|fd|md|dm-|sr|scd|st)[0-9]*"
+        devnode "^hd[a-z]"
+        devnode "^cciss.*"
+}
+----
+
+.Example
+In the following example, you determine the WWID of a device and add to the `multipath.conf` file.
+
+.Steps
+
+. Determine the WWID:
++
+----
+# /lib/udev/scsi_id -gud /dev/sda
+360030057024d0730239134810c0cb833
+----
++
+`sda` is the local SCSI disk that you want to add it to the blacklist.
+
+. Add the `WWID` to the blacklist stanza in `/etc/multipath.conf`:
++
+----
+blacklist {
+     wwid   360030057024d0730239134810c0cb833
+     devnode "^(ram|raw|loop|fd|md|dm-|sr|scd|st)[0-9]*"
+     devnode "^hd[a-z]"
+     devnode "^cciss.*"
+}
+----
+
+You should always check your `/etc/multipath.conf` file for legacy settings, especially in the defaults section, that might be overriding the default settings.
+
+The following table demonstrates the critical `multipathd` parameters for ONTAP LUNs and the required values. If a host is connected to LUNs from other vendors and any of these parameters are overridden, they will need to be corrected by later stanzas in the `multipath.conf` file that apply specifically to ONTAP LUNs. If this is not done, the ONTAP LUNs might not work as expected. You should only override these defaults in consultation with NetApp and/or an OS vendor and only when the impact is fully understood.
+
 
 
 
