--- a/legal_notices.adoc
+++ b/legal_notices.adoc
@@ -1,5 +1,5 @@
 ---
-permalink: legal-notices.html
+permalink: legal_notices.html
 sidebar: sidebar
 keywords: legal, notices, copyright, trademarks, patents
 summary: Legal notices provide access to copyright statements, trademarks, patents, and more.
